--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <load src="partials/about.html" />
+    <load src="partials/header.html" />
 
     <section>
       <h1>Lorem ipsum dolor sit amet.</h1>
